<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/information"
            android:textColor="@color/dark_grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                style="@style/TextViewStyle"
                android:gravity="left"

                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/drying" />
            <TextView
                android:id="@+id/tv_drying_index"
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingRight="50dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/wind" />

            <TextView
                android:id="@+id/tv_wind"
                style="@style/TextViewStyle"
                android:gravity="left"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/uv_index" />

            <TextView
                android:id="@+id/tv_uv_index"
                style="@style/TextViewStyle"
                android:gravity="left"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/comfort" />

            <TextView
                android:id="@+id/comfortable"
                style="@style/TextViewStyle"
                android:gravity="left"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/dressing_index" />

            <TextView
                android:id="@+id/tv_dressing_index"
                style="@style/TextViewStyle"
                android:gravity="start"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/dressing_advice" />

            <TextView
                android:id="@+id/tv_dressing_advice_index"
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingRight="50dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/wash_index" />
            <TextView
                android:id="@+id/tv_wash_index"
                style="@style/TextViewStyle"
                android:gravity="left"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/travel_index" />
            <TextView
                android:id="@+id/tv_travel_index"
                style="@style/TextViewStyle"
                android:gravity="left"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" >

            <TextView
                style="@style/TextViewStyle"
                android:gravity="left"
                android:paddingLeft="16dp"
                android:text="@string/exercise_index" />
            <TextView
                android:id="@+id/tv_exercise_index"
                style="@style/TextViewStyle"
                android:gravity="start"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/light_grey" />

    </LinearLayout>
</android.support.v7.widget.CardView>